--- a/PSetSkills6.Rmd
+++ b/PSetSkills6.Rmd
@@ -11,6 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 library(lubridate)
 library(base)
+library(tidyverse)
 
 ```
 
@@ -87,6 +88,35 @@ skewness <- function(x, na.rm = FALSE) {
 x=c(1,2,3,4,8)
 
 skewness(x)
+
+```
+
+1.3.c
+
+
+
+```{r}
+
+stats_summary <- function(df){
+  df_1 <- df %>% 
+    summarise_if(is.numeric, mean, na.rm = TRUE) %>% 
+    as.data.frame( row.name = "mean")
+  
+  
+  df_2 <-df %>%
+    summarise_if(is.numeric, variance, na.rm = TRUE) %>% 
+    as.data.frame( row.name = "")
+
+
+  df_3 <-df %>%
+    summarise_if(is.numeric, skewness, na.rm = TRUE) %>% 
+    as.data.frame( row.name = "skewness")
+
+  df_4 <-rbind(df_1,df_2,df_3)
+}
+
+view(stats_summary(diamonds))
+             
 
 ```
 
