--- a/PSetSkills6.Rmd
+++ b/PSetSkills6.Rmd
@@ -176,18 +176,67 @@ greet <- function(time = lubridate::now()) {
   greet()
 ```
 
-greet <- function(time = lubridate::now()) {
-  hr <- lubridate::hour(time)
-  # I don't know what to do about times after midnight,
-  # are they evening or morning?
-  if (hr < 12) {
-    print("good morning")
-  } else if (hr < 17) {
-    print("good afternoon")
-  } else {
-    print("good evening")
-  }
-}
+
+2.1.a
+
+```{r}
+calculate_mean <- vector("double", ncol(mtcars))
+names(calculate_mean) <- names(mtcars)
+for (i in names(mtcars)) {
+  calculate_mean[i] <- mean(mtcars[[i]])
   
-  greet(ymd_h("2017-01-08:05"))
+  
+}
+
+calculate_mean
+```
+
+2.1.b
+
+```{r}
+data("mpg")
+mpg_uniq <- vector("double", ncol(mpg))
+names(mpg_uniq) <- names(mpg)
+for (i in names(mpg)) {
+  mpg_uniq[i] <- n_distinct(mpg[[i]])
+}
+
+
+mpg_uniq
+```
+2.1.c
+
+```{r}
+n <- 10
+# values of the mean
+lambda_param <- c(1, 3, 10,30, 100)
+poissons <- vector("list", length(lambda_param))
+for (i in seq_along(poissons)) {
+  poissons[[i]] <- rpois(n, lambda = lambda_param[i])
+}
+
+poissons
+```
+2.2 Combining csv files
+
+```{r}
+
+files <- dir("c:/users/lenovo/downloads/", pattern = "\\.csv$", full.names = TRUE)
+files
+#> [1] "data//file1.csv" "data//file2.csv" "data//file3.csv"
+
+df_list <- vector("list", length(files))
+
+for (i in seq_along(files)) {
+  df_list[[i]] <- read_csv(files[[i]])
+}
+
+df_list
+
+combined_csv_files<-(bind_rows(df_list))
+
+combined_csv_files
+```
+2.3
+
 
